force-app/main/default/objects/NEP_IntegrationLog__c/NEP_IntegrationLog__c.object-meta.xml
<CustomObject>
    <label>NEP Integration Log</label>
    <pluralLabel>NEP Integration Logs</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>NEP Integration Log Name</label>
        <displayFormat>NEP-LOG-{00000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>