force-app/main/default/objects/NEP_IntegrationLog__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <description>Human-readable detail of the match/scoring/exception outcome this entry logs.</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>