force-app/main/default/objects/NEP_IntegrationLog__c/fields/Logged_At__c.field-meta.xml
<CustomField>
    <fullName>Logged_At__c</fullName>
    <label>Logged At</label>
    <description>Timestamp this log entry was written by the automation.</description>
    <type>DateTime</type>
    <required>true</required>
</CustomField>