force-app/main/default/objects/NEP_IntegrationLog__c/fields/Reading__c.field-meta.xml
<CustomField>
    <fullName>Reading__c</fullName>
    <label>Reading</label>
    <description>The NEP_SensorReading__c this log entry pertains to, when available.</description>
    <type>Lookup</type>
    <referenceTo>NEP_SensorReading__c</referenceTo>
    <relationshipName>NEP_Integration_Logs</relationshipName>
    <relationshipLabel>NEP Integration Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>