force-app/main/default/objects/NEP_IntegrationLog__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <description>Why this log entry was written.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UNMATCHED</fullName>
            </value>
            <value>
                <fullName>AMBIGUOUS</fullName>
            </value>
            <value>
                <fullName>EXCEPTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>